--- a/src/components/Search/styling/Search.scss
+++ b/src/components/Search/styling/Search.scss
@@ -44,11 +44,6 @@
 
     padding-block: var(--spacing-xs);
     padding-inline: var(--spacing-sm);
-
-    .str-chat__icon {
-      width: var(--icon-size-sm);
-      height: var(--icon-size-sm);
-    }
   }
 
   .str-chat__search-bar__exit-search-button {
