--- a/src/components/Thread/styling/ThreadHeader.scss
+++ b/src/components/Thread/styling/ThreadHeader.scss
@@ -42,6 +42,7 @@
   .str-chat__thread-header-details {
     @include utils.header-text-layout;
     align-items: start;
+    flex: 1;
 
     .str-chat__thread-header-subtitle,
     .str-chat__thread-header-title {
@@ -54,12 +55,10 @@
   }
 
   .str-chat__thread-header__start {
-    flex: 1;
     display: flex;
   }
 
   .str-chat__thread-header__end {
-    flex: 1;
     display: flex;
     justify-content: flex-end;
   }
@@ -75,7 +74,7 @@
     background-color: transparent;
     border: none;
 
-    svg {
+    .str-chat__icon {
       fill: var(--str-chat__thread-color);
     }
   }
